<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@drawable/background_welcome_min"
              tools:context="com.martin.semestralka.LoginActivity"
              android:gravity="bottom">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        >

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textIsSelectable="false"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        >

        <EditText
            android:id="@+id/login_heslo"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/heslo"
            android:imeActionId="@integer/login"
            android:imeActionLabel="@string/prihlasit_sa"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_prihlasit_sa_button"
        style="?android:textAppearanceMedium"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="prihlasenieExistujucehoUzivatela"
        android:text="@string/prihlasit_sa"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_registracia_button"
        style="?android:textAppearanceMedium"
        android:background="@color/white"
        android:textColor="@color/green"
        android:onClick="registraciaNovehoUzivatela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registracia"
        android:textStyle="bold"/>

</LinearLayout>
